src/command/snapshots/dss__command__parser__tests__cmd_parsing_of_redirection_squirrel_output_ops_with_minus.snap
---
source: src/command/parser.rs
expression: results
---
[
    ParseResult {
        cmds: [
            Command {
                tokens: [
                    Token {
                        lexeme: "ls",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            0,
                            1,
                        ),
                    },
                    Token {
                        lexeme: "/tmp/",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            3,
                            7,
                        ),
                    },
                    Token {
                        lexeme: "doesnotexist",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            9,
                            20,
                        ),
                    },
                ],
                path: "ls",
                negate_exit_status: false,
                is_unqualified_path: true,
            },
        ],
        execute_mode: Normal,
        exit_term: false,
        associated_operator: Some(
            RedirectSquirrelOutput {
                source: Some(
                    1,
                ),
                target: None,
            },
        ),
    },
]
