src/command/snapshots/dss__command__parser__tests__cmd_parsing_of_subshell.snap
---
source: src/command/parser.rs
expression: results
---
[
    ParseResult {
        cmds: [],
        execute_mode: Subshell(
            [
                Token {
                    lexeme: "ls",
                    token_type: Word(
                        Text,
                    ),
                    line: 0,
                    range: (
                        1,
                        2,
                    ),
                },
                Token {
                    lexeme: "&&",
                    token_type: Operator(
                        AndIf,
                    ),
                    line: 0,
                    range: (
                        4,
                        5,
                    ),
                },
                Token {
                    lexeme: "exit",
                    token_type: Word(
                        Keyword(
                            Exit,
                        ),
                    ),
                    line: 0,
                    range: (
                        7,
                        10,
                    ),
                },
            ],
        ),
        exit_term: false,
        operator_for_next_exec: None,
    },
]
