src/command/snapshots/dss__command__parser__tests__cmd_parsing_with_and_if_separator.snap
---
source: src/command/parser.rs
expression: results
---
[
    ParseResult {
        cmds: [
            Command {
                tokens: [
                    Token {
                        lexeme: "ls",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            0,
                            1,
                        ),
                    },
                    Token {
                        lexeme: "-la",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            3,
                            5,
                        ),
                    },
                ],
                path: "ls",
                negate_exit_status: false,
                is_unqualified_path: false,
            },
        ],
        execute_mode: Normal,
        exit_term: false,
        operator_for_next_exec: Some(
            AndIf,
        ),
    },
    ParseResult {
        cmds: [
            Command {
                tokens: [
                    Token {
                        lexeme: "./echo",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            10,
                            15,
                        ),
                    },
                    Token {
                        lexeme: "foo",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            17,
                            19,
                        ),
                    },
                ],
                path: "./echo",
                negate_exit_status: false,
                is_unqualified_path: true,
            },
        ],
        execute_mode: Normal,
        exit_term: false,
        operator_for_next_exec: None,
    },
]
